--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="/Users/MacBookPro/Documents/Atom Documents/CSS - My Site/images/DSCN4333.jpg" style="width:400px;height:400px;" alt="Nikolay">
+        <img src="images/DSCN4333.jpg" style="width:400px;height:400px;" alt="Nikolay">
         <h2>Hello.</h2>
         <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
       </div>
@@ -26,12 +26,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="/Users/MacBookPro/Documents/Atom Documents/CSS - My Site/images/giphy code scrolling screen.gif" alt="giphy">
+          <img class="" src="images/giphy code scrolling screen.gif" alt="giphy">
           <h3>Lorem & Ipsum</h3>
           <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
         <div class="skill-row">
-          <img class="" src="/Users/MacBookPro/Documents/Atom Documents/CSS - My Site/images/web-development.png" style="width:400px;height:400px;" alt="web development">
+          <img class="" src="images/web-development.png" style="width:400px;height:400px;" alt="web development">
           <h3>Lorem Ipsum Dolor</h3>
           <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
